# chargepal_ur_pilot

./: .gitignore  LICENSE  README.md  bota_basic_example.py  bota_compare_ft_settings.py  bota_plot_record.py  connect_to_socket.py  mkdocs.yml  pyproject.toml  realsense_calibration.py  realsense_validate_aruco_detector.py  robot_connect_to_socket.py  robot_free_drive.py  robot_ft_sensor_calibration.py  robot_ft_sensor_drive.py  robot_hand_eye_calibration.py  robot_keep_pose.py  robot_measure_tool_length.py  robot_motion_mode.py  robot_move_home.py  robot_move_joints_rnd.py  robot_move_to_square.py  robot_print_state.py  robot_record_state_sequence.py  set_up_pilot.py
config/: __init__.py  black_typ2.toml  blue_typ2.toml  gripper.toml  no_tool.toml  orange_cylinder.toml
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
examples/: bota_basic_example.py  realsense_est_aruco_board.py  realsense_validate_aruco_detector.py  robot_connect_to_socket.py  robot_free_drive.py  robot_ft_sensor_calibration.py  robot_ft_sensor_drive.py  robot_hand_eye_calibration.py  robot_hybrid_mode.py  robot_keep_pose.py  robot_measure_tool_length.py  robot_move_joints_rnd.py  robot_move_to_square.py  robot_record_state_sequence.py  robot_teach_in.py
scripts/: __init__.py  bota_basic_example.py  bota_compare_ft_settings.py  bota_plot_record.py  connect_to_socket.py  hand_eye_calibration.py  move_home.py  move_joints_rnd.py  print_robot_state.py  proc__detect_couple_lock_remove.py  proc__detect_engage_insert_unlock_decouple.py  proc__detect_plug_remove.py  proc__plug_remove.py  proc__plug_split.py  realsense_calibration.py  realsense_est_aruco_board.py  realsense_validate_aruco_detector.py  record_state_sequence.py  robot_connect_to_socket.py  robot_detect4plug4remove.py  robot_disconnect_from_socket.py  robot_est_socket_pose.py  robot_flange_eye_calibration.py  robot_force_mode.py  robot_free_drive.py  robot_ft_sensor_calibration.py  robot_hand_eye_calibration.py  robot_hybrid_mode.py  robot_keep_pose.py  robot_marker_offset_calibration.py  robot_measure_tool_length.py  robot_motion_mode.py  robot_move_home.py  robot_move_joint_path.py  robot_move_joints_rnd.py  robot_move_to.py  robot_move_to_square.py  robot_move_tool.py  robot_plugging.py  robot_plugging_and_split.py  (+3 more)
src/: config_server.py  robot.py  rtde_interface.py
ur_pilot/: __init__.py  base_logger.py  bota_helper.py  bota_sensor.py  bota_sensor_minimal.py  config.py  config_mdl.py  config_server.py  control_mode.py  core.py  move_j_rnd.py  move_to.py  plug_in.py  plug_out.py  robot.py  rtde_interface.py  ur_maneuvers.py  ur_pilot.py  ur_robot.py  utils.py
ur_pilot/camera/: __init__.py  camera_base.py  camera_build_in.py  camera_factory.py  camera_realsense.py
ur_pilot/config/: __init__.py  black_typ2.toml  blue_typ2.toml  configs.py  green_type2.toml  gripper.toml  ur_control.toml  ur_pilot.toml  yaml_helpers.py
ur_pilot/config/utilities/: configs.py
ur_pilot/core/: move_j_rnd.py  move_to.py  plug_in.py  plug_out.py  robot.py
ur_pilot/core/msgs/: request_msgs.py  result_msgs.py
ur_pilot/end_effector/: bota_helper.py  bota_sensor.py  flange_eye_calibration.py  hand_eye_calibration.py  models.py  tool.py
ur_pilot/ft_sensor/: bota_helper.py  bota_sensor.py  ft_calib.py
ur_pilot/monitor/: signal_monitor.py
ur_pilot/msgs/: request_msgs.py  result_msgs.py
