[tool.poetry]
name = "chargepal-ur-pilot"
version = "1.5.1"
description = ""
authors = ["Georg John <georg.john@dfki.de>"]
license = "BSD3"
readme = "README.md"
packages = [{include = "ur_pilot"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
pysoem = "^1.0.8"
pydantic = "^1.10.9"
pandas = "^2.0.3"
pyyaml = "^6.0.1"
testresources = "^2.0.1"
pyrealsense2 = "^2.54.2.5684"
spatialmath-python = "^1.1.9"
# Internal dependencies
rigmopy = {git="git@git.ni.dfki.de:gjohn/rigmopy.git"}
ur_control = {git="git@git.ni.dfki.de:chargepal/ur_control.git", rev="integration/ur_pilot-gjohn"}
chargepal_cvpd = {git="git@git.ni.dfki.de:chargepal/manipulation/chargepal_cvpd.git"}
chargepal_camera_kit = {git="git@git.ni.dfki.de:chargepal/manipulation/chargepal_camera_kit.git"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
types-pyyaml = "^6.0.12.12"
pandas-stubs = "1.5.3.230321"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
